# autocode-bot

./: .clang-format  .editorconfig  README.md  agent_sync.md  cursor_handoff.md  pyproject.toml
.cursor/rules/: robot-project.mdc
docs/calibration/: stereo_wide_angle.md
docs/hardware/: d500_lidar.md  imu_i2c.md  jetson_wifi_ap.md
docs/software/: telemetry_debug.md
scripts/: check_scan_topic.py  install_rosbridge.sh  jetson_wifi_ap.sh  jetson_wifi_client.sh  start_foxglove.sh  start_telemetry_real.sh
src/image_relay/: package.xml  setup.cfg  setup.py
src/image_relay/image_relay/: __init__.py  compressed_image_node.py
src/lidar_control/: package.xml  setup.cfg  setup.py
src/lidar_control/lidar_control/: __init__.py  lidar_control_node.py
src/motor_driver/: package.xml  setup.cfg  setup.py
src/motor_driver/motor_driver/: __init__.py  imu_node.py  motor_driver_node.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: cameras_relay.launch.py  compressed_image.launch.py  d500_lidar.launch.py  imu_only.launch.py  robot.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: robot.urdf.xacro
src/stereo_vision/: CMakeLists.txt  package.xml
src/stereo_vision/include/stereo_vision/: visibility.h
src/stereo_vision/src/: depth_processor_node.cpp  stereo_camera_node.cpp
src/telemetry/: combined_server.py  ros2_websocket_bridge.py  video_server.py  web_viewer.html
