<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_relay</name>
  <version>0.1.0</version>
  <description>Relay node that subscribes to raw images and publishes JPEG CompressedImage for lower bandwidth (e.g. rosbridge/Foxglove).</description>
  <maintainer email="todo@todo.com">autocode-bot</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
