<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for autocode-bot</description>
  <maintainer email="todo@todo.com">autocode-bot</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>motor_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>stereo_vision</exec_depend>
  <exec_depend>image_relay</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>ldlidar_stl_ros2</exec_depend>
  <exec_depend>lidar_control</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
